prevent tables columns from being too long

--- a/src/pages/panel/newCode/Panel.scss
+++ b/src/pages/panel/newCode/Panel.scss
@@ -15,3 +15,11 @@
     background-color: #384048;
   }
 }
+
+.table-dark {
+  th,
+  td {
+    word-wrap: break-word;
+    max-width: 150px;
+  }
+}
